<?xml version="1.0" encoding="utf-8"?>
<!--
  Copyright (C) 2015-2016 longri.de

  Licensed under the : GNU General Public License (GPL);
  you may not use this file except in compliance with the License.
  You may obtain a copy of the License at

       http://www.gnu.org/licenses/gpl.html

  Unless required by applicable law or agreed to in writing, software
  distributed under the License is distributed on an "AS IS" BASIS,
  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  See the License for the specific language governing permissions and
  limitations under the License.
 -->
<resources>


    <string name="celsius">Celsius</string>
    <string name="fahrenheit">Fahrenheit</string>
    <string name="IntervalLabel">Weather information update interval</string>
    <string name="preview">Preview</string>
    <string name="color">Color</string>
    <string name="clock_settings">Clock Settings</string>

    <string name="time_mode">24 Hour Time Mode</string>
    <string name="weather">Weather</string>
    <string name="unit">Unit</string>
    <string name="refresh_button">Refresh</string>
    <string name="open_weather_key">OpenWeatherMap API key</string>
    <string name="enter_api_key">Enter own API Key from OpenWeatherMap.com</string>
    <string name="ForecastIntervalLabel">Weather forecast update interval</string>
    <string name="info">Info</string>

    <string-array name="interval_array">
        <item>1 hour</item>
        <item>2 hours</item>
        <item>4 hours</item>
        <item>8 hours</item>
        <item>12 hours</item>
        <item>24 hours</item>
    </string-array>

    <string-array name="forecast_array">
        <item>3 hours</item>
        <item>6 hours</item>
        <item>9 hours</item>
        <item>12 hours</item>
    </string-array>
    <string name="copy_to_clipboard">Copy to clipboard</string>
    <string name="powered_by">Longri</string>
    <string name="donation">Donation for develop</string>
    <string name="debug">Debug</string>
    <string name="show_digital">Schow second time as digital</string>
    <string name="timzone_secondTime">Timezone for second time</string>
    <string name="select_icon">Select Icon</string>
    <string name="layout">Layout</string>
    <string name="clock">second clock</string>
    <string name="date">date</string>
    <string name="logo">logo</string>
    <string name="none">none</string>
    <string name="apply">Apply</string>
    <string name="cancel">Cancel</string>
    <string name="select_view">Select a view</string>
    <string name="brightness">Brightness</string>
    <string name="home_Url">http://power-watchface.de/</string>
    <string name="can_not_open_url">can\'t open URL :</string>
    <string name="scale_setting">Scale settings</string>
    <string name="scaleDraw">Draw scale at normal mode</string>
    <string name="scaleAmbientDraw">Draw scale at ambient mode</string>
    <string name="drawScaleValue">Draw values at normal mode</string>
    <string name="drawScaleValueAmbient">Draw values at ambient mode</string>
    <string name="totalizator_zoom">Totalizator zoom</string>
    <string name="totalizator_margin">Margin of totalizators</string>
    <string name="logo_settings">Logo Settings</string>
    <string name="logo_only_ambient">Show Logo only in ambient style</string>
    <string name="logo_only_normal">Show Logo only in normal style</string>
    <string name="logo_switch_style">Switch Logo style</string>
    <string name="ambient">Ambient</string>
    <string name="normal">Normal</string>

</resources>
