<?xml version="1.0" encoding="utf-8"?>
<!--
  Copyright (C) 2015-2016 longri.de

  Licensed under the : GNU General Public License (GPL);
  you may not use this file except in compliance with the License.
  You may obtain a copy of the License at

       http://www.gnu.org/licenses/gpl.html

  Unless required by applicable law or agreed to in writing, software
  distributed under the License is distributed on an "AS IS" BASIS,
  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  See the License for the specific language governing permissions and
  limitations under the License.
 -->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">


    <LinearLayout
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:layout_alignParentTop="true"
            android:layout_alignParentStart="true">

        <RadioGroup
                android:id="@+id/radioView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

            <RadioButton
                    android:drawableRight="@drawable/tiny_back"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/radioButton0" android:minWidth="300dp" android:text="@string/none"
                    android:layout_marginRight="@dimen/main_margin" android:layout_marginTop="@dimen/dialog_margin"
                    android:layout_marginBottom="@dimen/dialog_margin"/>
            <RadioButton
                    android:drawableRight="@drawable/tiny_back"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/radioButton1" android:minWidth="300dp" android:text="@string/logo"
                    android:layout_marginRight="@dimen/main_margin"
                    android:layout_marginBottom="@dimen/dialog_margin"/>
            <RadioButton
                    android:drawableRight="@drawable/tiny_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/radioButton2" android:minWidth="300dp" android:text="@string/date"
                    android:layout_marginBottom="@dimen/dialog_margin" android:layout_marginRight="@dimen/main_margin"
            />
            <RadioButton
                    android:drawableRight="@drawable/tiny_clock"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/radioButton3" android:minWidth="300dp" android:text="@string/clock"
                    android:layout_marginRight="@dimen/main_margin"
                    android:layout_marginBottom="@dimen/dialog_margin"/>
            <RadioButton
                    android:drawableRight="@drawable/tiny_weather"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/weather"
                    android:id="@+id/radioButton4" android:minWidth="300dp"
                    android:layout_marginBottom="@dimen/dialog_margin" android:layout_marginRight="@dimen/main_margin"
            />
        </RadioGroup>
        <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:gravity="right">
            <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/cancel"
                    android:id="@+id/btn_cancel"/>
            <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/apply"
                    android:id="@+id/btn_apply"/>
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>
